# markdown-converter-sdk

./: .gitignore  README.md  main.py  pyproject.toml
core/: __init__.py  converter.py
models/: __init__.py  options.py
tests/raw_file/: ~$匿名双盲政策.docx  匿名双盲政策.docx  测试文档_中式报表表格.docx  测试文档_包含LaTex公式以及代码片段.docx  测试文档_包含LaTex公式以及代码片段.xlsx
utils/: __init__.py  markdown_sdk.py  mime.py
